再次调整字体
调整栏目字体

--- a/css/style.css
+++ b/css/style.css
@@ -489,6 +489,7 @@
 	color: #D80C18;
 	font-family: "宋体";
 	font-weight: 100;
+	font-size: 14px;
 }
 .janda-jg-content .jg-top .jg-more{
 	float: right;
@@ -533,6 +534,7 @@
 	color: #D80C18;
 	font-family: "宋体";
 	font-weight: 100;
+	font-size: 14px;
 }
 .janda-al-content .al-top .al-more{
 	float: right;
@@ -620,6 +622,7 @@
 	color: #D80C18;
 	font-family: "宋体";
 	font-weight: 100;
+	font-size: 14px;
 }
 .llcy-hzhb-contaier .hzhb-top .hzhb-more{
 	float: right;
